src/objects/UserContactTagAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UserContactTagAssociations</relationshipLabel>
        <relationshipName>UserContactTagAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserContactTag__c</fullName>
        <label>UserContactTag</label>
        <referenceTo>UserContactTag__c</referenceTo>
        <relationshipLabel>UserContactTagAssociations</relationshipLabel>
        <relationshipName>UserContactTagAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserContactTagAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserContactTagAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UCTA-{0000}</displayFormat>
        <label>UserContactTagAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserContactTagAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>